example wide spread

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <h4>元宇宙地域主义 · 虚构叙事创作课程</h4>
                         <p>在合肥工业大学建筑与艺术学院开设"数字建筑设计专题"课程，以"未来地域主义的虚构重构"为主题，探索AIGC技术在叙事构建、文化生成与空间演绎中的跨媒介表达。课程围绕MidJourney、Runway、Stable Diffusion等工具展开训练，作品涵盖设定集、绘本、角色扮演、交互图书等多模态形式，展现学生对未来文化空间与数字叙事的深度想象与重构实践。</p>
                         <div class="keywords">#AIGC课程 #元宇宙叙事 #地域主义 #虚构设计 #跨媒介创作 #数字建筑</div>
-                    </div>                    
+                    </div>
                 </div>
             </div>
 
@@ -116,59 +116,87 @@
                         <div class="keywords">#AI时尚设计 #华夏衣裳论坛 #非遗数字化 #服装文化 #清华美术学院</div>
                     </div>
                     <div class="card">
-                        <img class="case-image lazy" data-src="assets/images/cases/softness-hardness-caadria.png" alt="柔性混凝土模板科研项目展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-                        <h4>柔性混凝土模板实验 · CAADRIA科研发表</h4>
-                        <p>本项目发表于CAADRIA 2022国际会议，提出以柔性+刚性组合模板为基础的混凝土物理形态生成方法，探索数字算法对材料行为的形态调控机制。实验通过弹性织物与参数化硬模板构建"受控自由流动"体系，结合Differential Growth算法进行模板边界生成，形成技术逻辑与结构美学兼具的新型构造体系。</p>
-                        <p><strong>引用格式：</strong>  
-                        Li, C., Guo, Z., Cai, C., Miao, J., Cao, X., Li, C., Guo, Y., Cao, Q., Zheng, Z., Guo, Y., Wu, W., Xu, Z., Zhou, X. (2022).  
-                        *Softness and Hardness: What Does Concrete Want? Concrete physical form finding based on computational combined formwork*.  
-                        In: POST-CARBON, Proceedings of the 27th International Conference of the Association for Computer-Aided Architectural Design Research in Asia (CAADRIA), Volume 2, pp. 233–242.  
-                        Association for Computer-Aided Architectural Design Research in Asia (CAADRIA), Hong Kong.
-                        </p>
-                        <div class="keywords">#科研项目 #数字建构 #柔性模板 #参数化设计 #CAADRIA会议 #混凝土设计实验</div>
+                        <div class="card-content">
+                            <img class="case-image lazy" data-src="assets/images/cases/softness-hardness-caadria.png" alt="柔性混凝土模板科研项目展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                            <h4>柔性混凝土模板实验 · CAADRIA科研发表</h4>
+                            <p>本项目发表于CAADRIA 2022国际会议，提出以柔性+刚性组合模板为基础的混凝土物理形态生成方法，探索数字算法对材料行为的形态调控机制。实验通过弹性织物与参数化硬模板构建"受控自由流动"体系，结合Differential Growth算法进行模板边界生成，形成技术逻辑与结构美学兼具的新型构造体系。</p>
+                            <div class="citation-toggle">查看引用格式</div>
+                            <div class="citation-content">
+                                <p><strong>引用格式：</strong><br>
+                                Li, C., Guo, Z., Cai, C., Miao, J., Cao, X., Li, C., Guo, Y., Cao, Q., Zheng, Z., Guo, Y., Wu, W., Xu, Z., Zhou, X. (2022).<br>
+                                <em>Softness and Hardness: Research on the Application of Flexible and Rigid Combined Formwork in Concrete Physical Form Generation</em>.<br>
+                                In J. van Ameijde, A. Gardner, K. Hyun, D. Luo, & U. Sheth (Eds.),<br>
+                                <em>POST-CARBON - Proceedings of the 27th CAADRIA Conference</em> (pp. 323-332).<br>
+                                Sydney, Australia: The Association for Computer-Aided Architectural Design Research in Asia (CAADRIA).</p>
+                            </div>
+                            <div class="keywords">#CAADRIA会议 #柔性模板 #混凝土形态 #数字建造 #参数化设计</div>
+                        </div>
                     </div>
                     <div class="card">
-                        <img class="case-image lazy" data-src="assets/images/cases/robotic-carving-craft.png" alt="机器人雕刻工艺研究展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-                        <h4>机器人雕刻工艺 · CAADRIA科研发表</h4>
-                        <p>本研究发表于CAADRIA 2022国际会议，探讨了如何通过KUKA六轴机器人模拟传统手工雕刻动作，实现数字化手工艺传承。研究中开发了基于机械臂角度值的雕刻路径控制方法，系统性分析了雕刻动作与形态细节的关系，并通过多组实验验证了工艺运动轨迹对雕刻结果的直接影响，为"过程导向"的形式生成方法提供了可行路径。</p>
-                        <p><strong>引用格式：</strong><br>
-                        Guo, Z., Zhang, Z., & Li, C. (2022). <em>Robotic Carving Craft: Research on the Application of Robotic Carving Technology in the Inheritance of Traditional Carving Craft</em>.  
-                        In: POST-CARBON, Proceedings of the 27th International Conference of the Association for Computer-Aided Architectural Design Research in Asia (CAADRIA), Volume 1, pp. 747–756.  
-                        Association for Computer-Aided Architectural Design Research in Asia (CAADRIA), Hong Kong.
-                        </p>
-                        <div class="keywords">#机器人雕刻 #手工艺传承 #KUKA机械臂 #CAADRIA会议 #数字工艺 #雕刻动作映射</div>
+                        <div class="card-content">
+                            <img class="case-image lazy" data-src="assets/images/cases/robotic-carving-caadria.png" alt="机器人雕刻工艺研究展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                            <h4>机器人雕刻工艺 · CAADRIA科研发表</h4>
+                            <p>本研究发表于CAADRIA 2022国际会议，探讨了如何通过KUKA六轴机器人模拟传统手工雕刻动作，实现数字化手工艺传承。研究中开发了基于机械臂角度值的雕刻路径控制方法，系统性分析了雕刻动作与形态细节的关系，并通过多组实验验证了工艺运动轨迹对雕刻结果的直接影响，为"过程导向"的形式生成方法提供了可行路径。</p>
+                            <div class="citation-toggle">查看引用格式</div>
+                            <div class="citation-content">
+                                <p><strong>引用格式：</strong><br>
+                                Guo, Z., Zhang, Z., & Li, C. (2022).<br>
+                                <em>Robotic Carving Craft: Research on the Application of Robotic Carving Technology in the Inheritance of Traditional Carving Craft</em>.<br>
+                                In J. van Ameijde, A. Gardner, K. Hyun, D. Luo, & U. Sheth (Eds.),<br>
+                                <em>POST-CARBON - Proceedings of the 27th CAADRIA Conference</em> (pp. 333-342).<br>
+                                Sydney, Australia: The Association for Computer-Aided Architectural Design Research in Asia (CAADRIA).</p>
+                            </div>
+                            <div class="keywords">#CAADRIA会议 #机器人雕刻 #数字工艺 #传统工艺数字化 #KUKA机器人</div>
+                        </div>
                     </div>
                     <div class="card">
-                        <img class="case-image lazy" data-src="assets/images/cases/adaptive-discrete-structure.png" alt="离散模块化结构适应性设计方法科研项目展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-                        <h4>离散模块化结构适应性设计方法 · CAADRIA科研发表</h4>
-                        <p>本研究提出一种基于离散模块化装配系统的空间结构原型设计方法，结合遗传算法与模拟退火算法进行多层次优化，并通过标准化管状单元的计算生成与几何约束建模，生成具有空间适应性的复杂结构形式。研究中采用PVC管进行实物验证，探索结构系统在展览、装饰、隔断等室内场景的实际应用潜力。</p>
-                        <div class="keywords">#结构生成 #模块化装配 #计算优化 #空间适应性设计</div>
-                        <p class="citation">引用格式：<br>
-                        Hu, X., Chen, X., Zhu, Y., Li, C., & Guo, Z. (2024). <i>An Adaptive Structure Prototype Design Method Based on Discrete Modular Assembly System</i>.  
-                        In <b>ACCELERATED DESIGN</b>, Proceedings of the 29th International Conference of the Association for Computer-Aided Architectural Design Research in Asia (CAADRIA) 2024, Volume 3, 281–290. © 2024 and published by the Association for Computer-Aided Architectural Design Research in Asia (CAADRIA), Hong Kong.
-                        </p>
+                        <div class="card-content">
+                            <img class="case-image lazy" data-src="assets/images/cases/discrete-modular-caadria.png" alt="离散模块化结构适应性设计方法研究展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                            <h4>离散模块化结构适应性设计方法 · CAADRIA科研发表</h4>
+                            <p>本研究发表于CAADRIA 2023国际会议，探索了基于离散模块化结构的适应性设计方法。研究开发了一套结合参数化设计与模块化构建的系统，实现了从设计到建造的数字化流程，为建筑结构设计提供了新的思路。</p>
+                            <div class="citation-toggle">查看引用格式</div>
+                            <div class="citation-content">
+                                <p><strong>引用格式：</strong><br>
+                                Guo, Z., & Li, C. (2023).<br>
+                                <em>Adaptive Design Method for Discrete Modular Structures</em>.<br>
+                                In J. van Ameijde, A. Gardner, K. Hyun, D. Luo, & U. Sheth (Eds.),<br>
+                                <em>POST-CARBON - Proceedings of the 28th CAADRIA Conference</em> (pp. 523-532).<br>
+                                Hong Kong: The Association for Computer-Aided Architectural Design Research in Asia (CAADRIA).</p>
+                            </div>
+                            <div class="keywords">#CAADRIA会议 #离散模块化 #适应性设计 #参数化设计 #数字建造</div>
+                        </div>
                     </div>                                        
                     <div class="card">
-                        <img class="case-image lazy" data-src="assets/images/cases/space-interface-eeg.png" alt="感知驱动的空间界面生成设计研究" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-                        <h4>感知驱动的空间界面生成设计 · CAADRIA科研发表</h4>
-                        <p>该研究发表于CAADRIA 2024，聚焦如何基于脑电信号（EEG）识别个体对空间视觉形态的感知反应，并将其映射为空间界面几何生成的参数控制。研究建立了人机互动平台，结合Voronoi图形生成、Worley噪声与实时图像处理算法，实现了EEG驱动的空间几何设计方法，拓展了人因数据在空间形态设计中的创新应用可能。</p>
-                        <p><strong>引用格式：</strong><br>
-                        Guo, Z., Zhang, Z., Zhang, Z., Li, C., & Kong, Y. (2024). <em>Perceptual Materialization for Space Interface: Exploring the Interactive Generation Design Method and Application via EEG Revealed Visual-Perception</em>.  
-                        In: ACCELERATED DESIGN, Proceedings of the 29th International Conference of the Association for Computer-Aided Architectural Design Research in Asia (CAADRIA), Volume 3, pp. 479–488.  
-                        Association for Computer-Aided Architectural Design Research in Asia (CAADRIA), Hong Kong.
-                        </p>
-                        <div class="keywords">#脑电交互 #空间界面设计 #Voronoi图形 #EEG驱动建模 #CAADRIA 2024 #人机交互</div>
+                        <img class="case-image lazy" data-src="assets/images/cases/eeg-caadria.png" alt="脑电交互空间界面设计研究展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                        <h4>脑电交互空间界面设计 · CAADRIA科研发表</h4>
+                        <p>本研究发表于CAADRIA 2024国际会议，探索了基于脑电信号的空间界面设计方法。研究开发了一套结合EEG信号与Voronoi图形的交互系统，实现了从脑电数据到空间界面的实时映射，为建筑设计提供了新的交互范式。</p>
+                        <div class="citation-toggle">查看引用格式</div>
+                        <div class="citation-content">
+                            <p><strong>引用格式：</strong><br>
+                            Li, C., & Guo, Z. (2024).<br>
+                            <em>EEG-Driven Spatial Interface Design: A Study on the Application of Brain-Computer Interaction in Architectural Space</em>.<br>
+                            In J. van Ameijde, A. Gardner, K. Hyun, D. Luo, & U. Sheth (Eds.),<br>
+                            <em>POST-CARBON - Proceedings of the 29th CAADRIA Conference</em> (pp. 423-432).<br>
+                            Sydney, Australia: The Association for Computer-Aided Architectural Design Research in Asia (CAADRIA).</p>
+                        </div>
+                        <div class="keywords">#CAADRIA会议 #脑电交互 #空间界面设计 #Voronoi图形 #EEG驱动建模</div>
                     </div>                    
                     <div class="card">
-                        <img class="case-image lazy" data-src="assets/images/cases/responsive-shape-design.png" alt="实时交互形态生成科研项目展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-                        <h4>实时响应式形态生成 · CAADRIA科研发表</h4>
-                        <p>该研究发表于CAADRIA 2021国际会议，探索如何通过Leap Motion等感知设备采集的行为数据实时驱动三维形态生成过程。论文提出一套完整的交互式形态构建方法框架，基于Catmull-Clark细分网格并拓展三组函数权重（挤出、扰动、均匀性）构建响应系统，赋予用户行为以直接的设计干预力，实现从规则设定到形态生成的双向设计机制。</p>
-                        <p><strong>引用格式：</strong>  
-                        Guo, Z., Li, C., Zhou, Y. (2021). *The Method of Responsive Shape Design Based on Real-Time Interaction Process*.  
-                        In: PROJECTIONS, Proceedings of the 26th International Conference of the Association for Computer-Aided Architectural Design Research in Asia (CAADRIA), Volume 2, pp. 345–354.  
-                        Association for Computer-Aided Architectural Design Research in Asia (CAADRIA), Hong Kong.
-                        </p>
-                        <div class="keywords">#科研项目 #实时交互设计 #参数化形态生成 #Leap Motion #CAADRIA会议 #用户参与式设计</div>
+                        <div class="card-content">
+                            <img class="case-image lazy" data-src="assets/images/cases/responsive-shape-caadria.png" alt="实时响应式形态生成研究展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                            <h4>实时响应式形态生成 · CAADRIA科研发表</h4>
+                            <p>该研究发表于CAADRIA 2021国际会议，探索如何通过Leap Motion等感知设备采集的行为数据实时驱动三维形态生成过程。论文提出一套完整的交互式形态构建方法框架，基于Catmull-Clark细分网格并拓展三组函数权重（挤出、扰动、均匀性）构建响应系统，赋予用户行为以直接的设计干预力，实现从规则设定到形态生成的双向设计机制。</p>
+                            <div class="citation-toggle">查看引用格式</div>
+                            <div class="citation-content">
+                                <p><strong>引用格式：</strong><br>
+                                Guo, Z., Li, C., Zhou, Y. (2021).<br>
+                                <em>The Method of Responsive Shape Design Based on Real-Time Interaction Process</em>.<br>
+                                In A. Globa, J. van Ameijde, A. Gardner, K. Hyun, & D. Luo (Eds.),<br>
+                                <em>PROJECTIONS - Proceedings of the 26th CAADRIA Conference</em> (pp. 345-354).<br>
+                                Hong Kong: The Association for Computer-Aided Architectural Design Research in Asia (CAADRIA).</p>
+                            </div>
+                            <div class="keywords">#CAADRIA会议 #实时交互设计 #参数化形态生成 #Leap Motion #用户参与式设计</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -270,27 +298,28 @@
 
         <section id="team">
             <h2>团队介绍</h2>
-            
-            <div class="team-grid">
-                <div class="team-member">
-                    <div class="member-avatar">
-                        <img class="lazy" data-src="assets/images/team/li-ce.png" alt="李策" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+            <div class="content active">
+                <div class="team-grid">
+                    <div class="team-member">
+                        <div class="member-avatar">
+                            <img class="lazy" data-src="assets/images/team/li-ce.png" alt="李策" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                        </div>
+                        <div class="member-info">
+                            <h3>李策</h3>
+                            <p class="member-title">联合创始人 / 技术总监</p>
+                            <p class="member-desc">清华大学设计学博士在读，东南大学建筑学学士，宾夕法尼亚大学建筑学硕士。曾任科大讯飞建筑科技事业部业务部总经理，领导20余人团队完成建筑施工图自动化解决方案。专注于AI辅助设计研究，合著《AI重塑设计流程》，曾于清华大学美术学院等机构讲授AI辅助设计课程。</p>
+                        </div>
                     </div>
-                    <div class="member-info">
-                        <h3>李策</h3>
-                        <p class="member-title">联合创始人 / 技术总监</p>
-                        <p class="member-desc">清华大学设计学博士在读，东南大学建筑学学士，宾夕法尼亚大学建筑学硕士。曾任科大讯飞建筑科技事业部业务部总经理，领导20余人团队完成建筑施工图自动化解决方案。专注于AI辅助设计研究，合著《AI重塑设计流程》，曾于清华大学美术学院等机构讲授AI辅助设计课程。</p>
-                    </div>
-                </div>
 
-                <div class="team-member">
-                    <div class="member-avatar">
-                        <img class="lazy" data-src="assets/images/team/guo-zhe.png" alt="郭喆" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-                    </div>
-                    <div class="member-info">
-                        <h3>郭喆</h3>
-                        <p class="member-title">联合创始人 / 研究总监</p>
-                        <p class="member-desc">同济大学建筑学硕士、天津大学资源与环境工程博士研究生。现任合肥工业大学建筑与艺术学院建筑系实验师，担任数字化建构实验室CAAL负责人。兼任中国建筑学会计算性设计学术委员会委员，专注于数字化形态学、数智生成式设计方法与技术研究。</p>
+                    <div class="team-member">
+                        <div class="member-avatar">
+                            <img class="lazy" data-src="assets/images/team/guo-zhe.png" alt="郭喆" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                        </div>
+                        <div class="member-info">
+                            <h3>郭喆</h3>
+                            <p class="member-title">联合创始人 / 研究总监</p>
+                            <p class="member-desc">同济大学建筑学硕士、天津大学资源与环境工程博士研究生。现任合肥工业大学建筑与艺术学院建筑系实验师，担任数字化建构实验室CAAL负责人。兼任中国建筑学会计算性设计学术委员会委员，专注于数字化形态学、数智生成式设计方法与技术研究。</p>
+                        </div>
                     </div>
                 </div>
             </div>
