--- a/index.html
+++ b/index.html
@@ -99,22 +99,10 @@
             <div class="collapsible-wrapper">
                 <div class="collapsible">
                     <div class="collapsible-header">科研支持 · Research Enablement</div>
-                    <div class="collapsible-desc">我们协助高校教师与研究者将个人教学经验与研究方法转化为课程体系、论文成果、专利项目与公开资源，同时也参与 AI 教育场景的研究与实验，推动以工具为桥梁的"教学研究共生"实践。</div>
+                    <div class="collapsible-desc">我们协助高校教师与研究者将个人教学经验与研究方法转化为论文成果、专利项目与公开资源，同时也参与 AI 教育场景的研究与实验，推动以工具为桥梁的"教学研究共生"实践。</div>
                     <span>点击查看实践案例</span>
                 </div>
                 <div class="content">
-                    <div class="card">
-                        <img class="case-image lazy" data-src="assets/images/cases/tsinghua-human-ai-arts.jpg" alt="清华会讲人机共生与文艺创新工作坊展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-                        <h4>清华会讲｜人机共生与文艺创新工作坊</h4>
-                        <p>在第七届"清华会讲"中，李策作为受邀嘉宾参与"人机共生与文艺创新"学术工作坊，分享AI与传统工艺融合的实践经验，包括AI生成纹样、参数化建模、3D打印成型及文化遗产数字转译，探索AIGC在文化创意与设计领域的深度落地路径。</p>
-                        <div class="keywords">#清华会讲 #AIGC艺术创新 #人机共生 #传统工艺数字化 #AI与文化融合</div>
-                    </div>
-                    <div class="card">
-                        <img class="case-image lazy" data-src="assets/images/cases/huaxia-fashion-ai.png" alt="华夏衣裳论坛AI与数字化服装设计展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-                        <h4>华夏衣裳论坛｜AI与数字时尚主题演讲</h4>
-                        <p>在"2024年第七届·华夏衣裳·艺术与时尚"中国高等院校服装史论坛上，李策以"人喻工物：工艺参数介入下的AI时尚设计"为题，探讨AI算法与传统工艺在时尚设计数字化表达中的融合方式。论坛由清华美术学院联合东华大学出版社等多家单位主办，聚焦文化传承、非遗数字化与AI赋能传统设计。</p>
-                        <div class="keywords">#AI时尚设计 #华夏衣裳论坛 #非遗数字化 #服装文化 #清华美术学院</div>
-                    </div>
                     <div class="card">
                         <div class="card-content">
                             <img class="case-image lazy" data-src="assets/images/cases/softness-hardness-caadria.png" alt="柔性混凝土模板科研项目展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
@@ -215,28 +203,75 @@
                         <div class="keywords">#企业内训 #AIGC工具应用 #飞利浦 #AI生成设计</div>
                     </div>
                     <div class="card">
-                        <img class="case-image lazy" data-src="assets/images/cases/thad-midjourney-talk.jpg" alt="清华建研院MidJourney实践讲座展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-                        <h4>清华建研院MidJourney实践讲座</h4>
-                        <p>应清华大学建筑设计研究院邀请，开展"AI探索小组"专题讲座，主题为《科技为设计赋能——AIGC快速生成效果图（MidJourney类）》。活动聚焦AI在建筑视觉表达中的实际应用，帮助设计人员提升图像生成能力与效率，推动设计工作数字化转型。</p>
-                        <div class="keywords">#建筑设计 #AIGC #MidJourney #设计赋能 #图像生成</div>
-                    </div>
-                    <div class="card">
                         <img class="case-image lazy" data-src="assets/images/cases/ids-vancouver-aigc-support.png" alt="SA-Math IDS温哥华展AI技术支持案例展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
                         <h4>SA-Math · IDS温哥华展AI支持项目</h4>
                         <p>作为SA-Math团队的AIGC技术支持成员，参与"3D混凝土打印与数字建造"课程开发与项目执行，为作品概念生成、视觉叙事建构、AI形态建模及展览交互流程提供全面协作支持。该项目于2024年9月在加拿大IDS温哥华展亮相，展出近半年成果，获得主办方与国际观众的高度关注，并入选Red Dot及London Design Award。通过AI技术与打印硬件结合，推动3D打印建筑部件从教育走向产业实践。</p>
                         <div class="keywords">#AIGC支持 #3D打印建筑 #IDS温哥华 #智能建造 #SA-Math #AI形态生成</div>
                     </div>                    
                     <div class="card">
+                        <img class="case-image lazy" data-src="assets/images/cases/thad-midjourney-talk.jpg" alt="清华建研院MidJourney实践讲座展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                        <h4>清华建研院AI设计工具应用培训</h4>
+                        <p>应清华大学建筑设计研究院邀请，为其设计团队开展"AI探索小组"专题培训，主题为《科技为设计赋能——AIGC快速生成效果图（MidJourney类）》。培训聚焦AI在建筑视觉表达中的实际应用，帮助设计人员提升图像生成能力与效率，推动设计工作数字化转型。</p>
+                        <div class="keywords">#建筑设计 #AIGC培训 #MidJourney #设计赋能 #图像生成</div>
+                    </div>
+                    <div class="card">
                         <img class="case-image lazy" data-src="assets/images/cases/tsinghua-cedu-lecture.jpg" alt="清华继续教育学院AI讲座案例展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-                        <h4>清华继续教育学院AI赋能实务讲座</h4>
-                        <p>受清华大学继续教育学院邀请，面向项目管理、项目推广、学习运营等部门教职工开展"AI工具与继续教育融合应用"专题讲座，结合AIGC在内容生成、项目设计、培训运营等领域的真实案例，系统梳理AI工具如何助力业务效率与创新能力提升。</p>
-                        <div class="keywords">#AIGC讲座 #教育赋能 #业务创新 #清华继续教育</div>
+                        <h4>清华继续教育学院AI赋能实务培训</h4>
+                        <p>受清华大学继续教育学院邀请，面向项目管理、项目推广、学习运营等部门教职工开展"AI工具与继续教育融合应用"专题培训，结合AIGC在内容生成、项目设计、培训运营等领域的真实案例，系统梳理AI工具如何助力业务效率与创新能力提升。</p>
+                        <div class="keywords">#AIGC培训 #教育赋能 #业务创新 #清华继续教育</div>
                     </div>
                     <div class="card">
                         <img class="case-image lazy" data-src="assets/images/cases/csadi-lecture.jpg" alt="中建西南院至善学堂讲座案例展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-                        <h4>中建西南院"至善学堂"AI讲座</h4>
-                        <p>应中国建筑西南设计研究院有限公司广东院邀请，作为"至善学堂·未蓝星研学考察"系列课程讲师，在线下专题讲座中围绕"大湾区城市建筑创新与传承路径"主题，分享AIGC图像生成技术在城市设计、建筑表达中的实际应用，助力企业设计流程智能升级。</p>
-                        <div class="keywords">#中建西南院 #至善学堂 #线下讲座 #城市设计 #AIGC应用</div>
+                        <h4>中建西南院"至善学堂"AI设计培训</h4>
+                        <p>应中国建筑西南设计研究院有限公司广东院邀请，作为"至善学堂·未蓝星研学考察"系列课程讲师，开展"大湾区城市建筑创新与传承路径"主题培训，分享AIGC图像生成技术在城市设计、建筑表达中的实际应用，助力企业设计流程智能升级。</p>
+                        <div class="keywords">#中建西南院 #至善学堂 #企业培训 #城市设计 #AIGC应用</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="social-impact">
+            <h2>社会影响</h2>
+            <div class="collapsible-wrapper">
+                <div class="collapsible">
+                    <div class="collapsible-header">学术讲座 · Academic Lectures</div>
+                    <div class="collapsible-desc">我们积极参与学术交流与知识分享，通过讲座、论坛等形式，推动AI与设计领域的跨界对话与创新实践。</div>
+                    <span>点击查看实践案例</span>
+                </div>
+                <div class="content active">
+                    <div class="card">
+                        <img class="case-image lazy" data-src="assets/images/social/tsinghua-human-ai-arts.jpg" alt="清华会讲人机共生与文艺创新工作坊展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                        <h4>清华会讲｜人机共生与文艺创新工作坊</h4>
+                        <p>在第七届"清华会讲"中，李策作为受邀嘉宾参与"人机共生与文艺创新"学术工作坊，分享AI与传统工艺融合的实践经验，包括AI生成纹样、参数化建模、3D打印成型及文化遗产数字转译，探索AIGC在文化创意与设计领域的深度落地路径。</p>
+                        <div class="keywords">#清华会讲 #AIGC艺术创新 #人机共生 #传统工艺数字化 #AI与文化融合</div>
+                    </div>
+                    <div class="card">
+                        <img class="case-image lazy" data-src="assets/images/social/huaxia-fashion-ai.png" alt="华夏衣裳论坛AI与数字化服装设计展示" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                        <h4>华夏衣裳论坛｜AI与数字时尚主题演讲</h4>
+                        <p>在"2024年第七届·华夏衣裳·艺术与时尚"中国高等院校服装史论坛上，李策以"人喻工物：工艺参数介入下的AI时尚设计"为题，探讨AI算法与传统工艺在时尚设计数字化表达中的融合方式。论坛由清华美术学院联合东华大学出版社等多家单位主办，聚焦文化传承、非遗数字化与AI赋能传统设计。</p>
+                        <div class="keywords">#AI时尚设计 #华夏衣裳论坛 #非遗数字化 #服装文化 #清华美术学院</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="collapsible-wrapper">
+                <div class="collapsible">
+                    <div class="collapsible-header">出版著作 · Publications</div>
+                    <div class="collapsible-desc">我们致力于将实践经验与研究成果转化为系统性的知识体系，通过出版著作推动AI与设计领域的知识传播与创新实践。</div>
+                    <span>点击查看出版作品</span>
+                </div>
+                <div class="content active">
+                    <div class="card">
+                        <img class="case-image lazy" data-src="assets/images/social/book-ai-design-process.jpg" alt="AI重塑设计流程书籍封面" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                        <h4>《AI重塑设计流程-设计师的人工智能通识课》</h4>
+                        <p>本书由徐帆、李策、曹先锋合著，是一部深入探讨AI技术如何影响并改变设计行业的系统性著作。作者团队基于多年实践经验，从AI的发展背景出发，详细解析了近年来AI在设计领域的突破性应用，并对未来发展趋势进行了前瞻性探讨。通过深入浅出的技术解析和丰富的实践案例，为设计领域的从业者提供了实用的AI应用指南。</p>
+                        <div class="keywords">#AI设计 #技术通识 #设计流程 #人工智能 #设计教育</div>
+                    </div>
+                    <div class="card">
+                        <img class="case-image lazy" data-src="assets/images/social/book-midjourney-fashion.png" alt="Midjourney人工智能创意设计教材封面" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                        <h4>《Midjourney人工智能创意设计》</h4>
+                        <p>本书是高等教育"十四五"部委级规划教材，由贾玺增主编，张馨翌、李策、邓云、贾玺增共同编著。作为系列丛书中的重要组成部分，本书系统性地介绍了Midjourney在设计领域的创新应用。从AI图像生成的基础原理到高级创意表达技巧，结合丰富的设计案例，为设计专业学生和从业者提供了全面的AI辅助设计指南。教材特别注重理论与实践的结合，通过大量实例展示如何将AI技术融入传统设计流程，推动设计创新与效率提升。</p>
+                        <div class="keywords">#部委级规划教材  #Midjourney #AI创意 #高等教育</div>
                     </div>
                 </div>
             </div>
@@ -253,7 +288,7 @@
                                     <p>"课程设计非常有实验性，但结构也很清晰。学生们不仅学会了AI工具，更重要的是学会了如何用技术去传达自己的想法。"<br><strong>— 某高校副教授 / 课程共创合作教师</strong></p>
                                 </div>
                                 <div class="feedback-card">
-                                    <p>"从工具教学到思维启发，整个训练过程让我对设计教育有了新的理解。'技以载心'不是一句口号，而是他们课程中的每一步。"<br><strong>— 某高校青年教师 / 教研项目支持对象</strong></p>
+                                    <p>"从工具教学到思维启发，整个训练过程让我对设计教育有了新的理解。"<br><strong>— 某高校青年教师 / 教研项目支持对象</strong></p>
                                 </div>
                                 <div class="feedback-card">
                                     <p>"我原以为只是一次AI图像工作坊，结果团队带着我们把从调研、文本生成到图像建模都做了一遍，感觉像经历了一个完整的创作系统。"<br><strong>— 某设计集团创新部门成员 / 企业内训参与者</strong></p>
@@ -364,28 +399,61 @@
             <h2>合作伙伴</h2>
             <div class="partners-grid">
                 <div class="partner-logo">
-                    <img class="lazy" data-src="assets/images/partner1-placeholder.png" alt="合作伙伴1" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                    <img class="lazy" data-src="assets/images/logos/logo-uni-THU.png" alt="清华大学" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
                 </div>
                 <div class="partner-logo">
-                    <img class="lazy" data-src="assets/images/partner2-placeholder.png" alt="合作伙伴2" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                    <img class="lazy" data-src="assets/images/logos/logo-uni-TongJi.png" alt="同济大学" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
                 </div>
                 <div class="partner-logo">
-                    <img class="lazy" data-src="assets/images/partner3-placeholder.png" alt="合作伙伴3" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                    <img class="lazy" data-src="assets/images/logos/logo-uni-HUT.png" alt="合肥工业大学" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
                 </div>
                 <div class="partner-logo">
-                    <img class="lazy" data-src="assets/images/partner4-placeholder.png" alt="合作伙伴4" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                    <img class="lazy" data-src="assets/images/logos/logo-uni-AJU.png" alt="安徽建筑大学" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
                 </div>
                 <div class="partner-logo">
-                    <img class="lazy" data-src="assets/images/partner5-placeholder.png" alt="合作伙伴5" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                    <img class="lazy" data-src="assets/images/logos/LAFA.png" alt="鲁迅美术学院" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
                 </div>
                 <div class="partner-logo">
-                    <img class="lazy" data-src="assets/images/partner6-placeholder.png" alt="合作伙伴6" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                    <img class="lazy" data-src="assets/images/logos/logo-uni-TAFA.png" alt="天津美术学院" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
                 </div>
                 <div class="partner-logo">
-                    <img class="lazy" data-src="assets/images/partner7-placeholder.png" alt="合作伙伴7" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                    <img class="lazy" data-src="assets/images/logos/logo-uni-SZU.png" alt="深圳大学" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
                 </div>
                 <div class="partner-logo">
-                    <img class="lazy" data-src="assets/images/partner8-placeholder.png" alt="合作伙伴8" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                    <img class="lazy" data-src="assets/images/logos/logo-uni-WHU.png" alt="武汉大学" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                </div>
+                <div class="partner-logo">
+                    <img class="lazy" data-src="assets/images/logos/logo-uni-SCU.png" alt="四川大学" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                </div>
+                <div class="partner-logo">
+                    <img class="lazy" data-src="assets/images/logos/logo-uni-SEU.png" alt="东南大学" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                </div>
+                <div class="partner-logo">
+                    <img class="lazy" data-src="assets/images/logos/logo-uni-TJU.png" alt="天津大学" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                </div>
+                <div class="partner-logo">
+                    <img class="lazy" data-src="assets/images/logos/logo-uni-penn.png" alt="宾夕法尼亚大学" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                </div>
+                <div class="partner-logo">
+                    <img class="lazy" data-src="assets/images/logos/logo-dajie.png" alt="大界机器人" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                </div>
+                <div class="partner-logo">
+                    <img class="lazy" data-src="assets/images/logos/logo-PHILIPS.png" alt="飞利浦" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                </div>
+                <div class="partner-logo">
+                    <img class="lazy" data-src="assets/images/logos/logo-GODO.png" alt="国投宁咨" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                </div>
+                <div class="partner-logo">
+                    <img class="lazy" data-src="assets/images/logos/logo-THAD.png" alt="清华大学建筑设计研究院" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                </div>
+                <div class="partner-logo">
+                    <img class="lazy" data-src="assets/images/logos/logo-CSWADI.png" alt="中建西南院" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                </div>
+                <div class="partner-logo">
+                    <img class="lazy" data-src="assets/images/logos/logo-stedi.png" alt="上海隧道" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                </div>
+                <div class="partner-logo">
+                    <img class="lazy" data-src="assets/images/logos/logo-samath.png" alt="SA-Math" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
                 </div>
             </div>
         </section>
@@ -398,7 +466,7 @@
                     课程共创 / 项目委托 / 教研支持 / 企业内训</p>
                     <p><strong>联系方式：</strong><br>
                     邮箱：marchlice@outlook.com<br>
-                    微信公众号：浅译万道TransWonder<br>
+                    微信公众号：闻斯设计<br>
                     所在地：北京 / 上海 / 合肥 / 宁波 /支持远程协作</p>
                 </div>
                 <div class="contact-image">
@@ -410,7 +478,6 @@
 
     <footer>
         <p>我们始终相信，真正的教学，是一次又一次的共同创作。</p>
-        <p>© 2025 宁波浅译万道文化科技有限公司 Transwonder Lab</p>
     </footer>
 
     <script src="js/main.js"></script>
