--- a/index.html
+++ b/index.html
@@ -449,19 +449,8 @@
                         </div>
                         <div class="member-info">
                             <h3>李策</h3>
-                            <p class="member-title">联合创始人 / 技术总监</p>
+                            <p class="member-title">实验室主理人</p>
                             <p class="member-desc">清华大学设计学博士研究生，东南大学建筑学学士，宾夕法尼亚大学建筑学硕士。曾任科大讯飞建筑科技事业部业务部总经理，领导20余人团队完成建筑施工图自动化解决方案。专注于AI辅助设计研究，合著《AI重塑设计流程》，曾于清华大学美术学院等机构讲授AI辅助设计课程。</p>
-                        </div>
-                    </div>
-
-                    <div class="team-member">
-                        <div class="member-avatar">
-                            <img class="lazy" data-src="assets/images/team/guo-zhe.png" alt="郭喆" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-                        </div>
-                        <div class="member-info">
-                            <h3>郭喆</h3>
-                            <p class="member-title">联合创始人 / 研究总监</p>
-                            <p class="member-desc">同济大学建筑学硕士、天津大学资源与环境工程博士研究生。现任合肥工业大学建筑与艺术学院建筑系实验师，担任数字化建构实验室CAAL负责人。兼任中国建筑学会计算性设计学术委员会委员，专注于数字化形态学、数智生成式设计方法与技术研究。</p>
                         </div>
                     </div>
 
@@ -471,8 +460,19 @@
                         </div>
                         <div class="member-info">
                             <h3>徐帆</h3>
-                            <p class="member-title">营销总监</p>
+                            <p class="member-title">营销顾问</p>
                             <p class="member-desc">AI研究室-帆哥账号主理人，同济大学AI课嘉宾，多家企业AI顾问。致力于人工智能在设计实践中的运用与研究。全网关注者30万+，播放总量2000万+，著有《AI重塑设计流程》等书籍。</p>
+                        </div>
+                    </div>
+
+                    <div class="team-member">
+                        <div class="member-avatar">
+                            <img class="lazy" data-src="assets/images/team/guo-zhe.png" alt="郭喆" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+                        </div>
+                        <div class="member-info">
+                            <h3>郭喆</h3>
+                            <p class="member-title">研究顾问</p>
+                            <p class="member-desc">同济大学建筑学硕士、天津大学资源与环境工程博士研究生。现任合肥工业大学建筑与艺术学院建筑系实验师，担任数字化建构实验室CAAL负责人。兼任中国建筑学会计算性设计学术委员会委员，专注于数字化形态学、数智生成式设计方法与技术研究。</p>
                         </div>
                     </div>
 
